; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_hvc_console.c___hvc_resize.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_hvc_console.c___hvc_resize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hvc_struct = type { i32, %struct.winsize }
%struct.winsize = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__hvc_resize(%struct.hvc_struct* %0, i32 %1) #0 {
  %3 = alloca %struct.winsize, align 4
  %4 = alloca %struct.hvc_struct*, align 8
  %5 = getelementptr inbounds %struct.winsize, %struct.winsize* %3, i32 0, i32 0
  store i32 %1, i32* %5, align 4
  store %struct.hvc_struct* %0, %struct.hvc_struct** %4, align 8
  %6 = load %struct.hvc_struct*, %struct.hvc_struct** %4, align 8
  %7 = getelementptr inbounds %struct.hvc_struct, %struct.hvc_struct* %6, i32 0, i32 1
  %8 = bitcast %struct.winsize* %7 to i8*
  %9 = bitcast %struct.winsize* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %8, i8* align 4 %9, i64 4, i1 false)
  %10 = load %struct.hvc_struct*, %struct.hvc_struct** %4, align 8
  %11 = getelementptr inbounds %struct.hvc_struct, %struct.hvc_struct* %10, i32 0, i32 0
  %12 = call i32 @schedule_work(i32* %11)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @schedule_work(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
